--- a/Notebook/Titanic.ipynb
+++ b/Notebook/Titanic.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "Embora houvesse algum elemento de sorte envolvido na sobrevivência, parece que alguns grupos de pessoas tinham mais probabilidade de sobreviver do que outros.\n",
     "\n",
-    "O desafio é construir um modelo preditivo de classificação que responda à seguinte pergunte: \"Que tipo de pessoa tem mais probabilidade de sobreviver?\" usando os atributos de casa um dos passageiros. Como métrica de validação, vamos utilizar a acurácia.\n",
+    "O desafio é construir um modelo preditivo de classificação que responda à seguinte pergunte: \"Que tipo de pessoa tem mais probabilidade de sobreviver?\" usando os atributos de cada um dos passageiros. Como métrica de validação, vamos utilizar a acurácia.\n",
     "\n",
     "Esse problema faz parte de uma competição bastante famosa do [Kaggle](https://www.kaggle.com/c/titanic)\n",
     "\n",
@@ -973,7 +973,7 @@
     "#### Variáveis Contínuas:\n",
     "* A distribuição de idade não parece ter uma forte relação com a variável alvo. Embora tenhamos um alto percentual de sobrevivente nas idades menores que 5 anos comparado com as demais idades, os demais dados mostram um comportamento mais homogêneo.\n",
     "\n",
-    "* A Correlação da variável *Fare* é de 0.26, indicando uma possível correlação fraca positiva. No gráfico de distribuição, temos que existe um ponto específico onde o número de sobrevivemtes passam os de não sobreviventes, podendo ser um indicativo de alguma separação dos dados\n",
+    "* A Correlação da variável *Fare* é de 0.26, indicando uma possível correlação fraca positiva. No gráfico de distribuição, temos que existe um ponto específico onde o número de sobreviventes passam os de não sobreviventes, podendo ser um indicativo de alguma separação dos dados\n",
     "\n",
     "#### Variáveis Discretas\n",
     "* As variáveis *SibSp* e *Parch* possuem um comportamento muito semelhante em relação à *Survived*, visualmente os casos em que os valores desses atributos são 0 possuem um volume de não sobreviventes superior aos demais, podendo ser um indicio que ter um \"conhecido\" dentro do navio aumenta as chances de sobreviver\n",
@@ -993,7 +993,7 @@
    "source": [
     "### 4. Pipeline de pré-processamento\n",
     "\n",
-    "Durante a análise exploratória algumas variáveis não forneceram nenhuma informação adicional aos dados (*Name*,*Ticket*,*Cabin*) e portanto serão excluidas do modelo. O atributo *Age* também não será utilizado pois não acrescentou muitas informações aos dados, além de possuir muitos dados vazios.\n",
+    "Durante a análise exploratória algumas variáveis não foram exploradas (*Name*,*Ticket*,*Cabin*) e portanto serão excluidas do modelo. O atributo *Age* também não será utilizado pois não acrescentou muitas informações aos dados, além de possuir muitos dados vazios.\n",
     "\n",
     "A variável *Embarked* possui alguns valores nulos e será preenchida com o valor mais frequente. Além disso, essa variável será transformada pelo *OneHotEncoder* para transformar seus valores em colunas binárias.\n",
     "\n",
